--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,139 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MaLangEE - Frontend</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .container {
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
-            padding: 40px;
-            max-width: 600px;
-            text-align: center;
-        }
-
-        h1 {
-            color: #333;
-            margin-bottom: 10px;
-            font-size: 2.5em;
-        }
-
-        .subtitle {
-            color: #667eea;
-            font-size: 1.2em;
-            margin-bottom: 30px;
-        }
-
-        .info {
-            background: #f5f5f5;
-            padding: 20px;
-            border-radius: 8px;
-            margin: 20px 0;
-            text-align: left;
-        }
-
-        .info h2 {
-            color: #333;
-            font-size: 1.3em;
-            margin-bottom: 15px;
-        }
-
-        .info-item {
-            margin: 10px 0;
-            color: #555;
-            line-height: 1.8;
-        }
-
-        .info-item strong {
-            color: #333;
-        }
-
-        .status {
-            display: inline-block;
-            background: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 20px;
-            margin: 20px 0;
-            font-weight: bold;
-        }
-
-        .footer {
-            color: #999;
-            font-size: 0.9em;
-            margin-top: 30px;
-            padding-top: 20px;
-            border-top: 1px solid #eee;
-        }
-
-        .footer a {
-            color: #667eea;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>🚀 MaLangEE Frontend</h1>
-        <p class="subtitle">AI 언어 학습 플랫폼</p>
-
-        <div class="status">✓ Frontend Server Running</div>
-
-        <div class="info">
-            <h2>📌 프로젝트 정보</h2>
-            <div class="info-item">
-                <strong>프로젝트 명:</strong> MaLangEE
-            </div>
-            <div class="info-item">
-                <strong>설명:</strong> AI 기반 언어 학습 플랫폼
-            </div>
-            <div class="info-item">
-                <strong>버전:</strong> 1.0.0
-            </div>
-            <div class="info-item">
-                <strong>타입:</strong> Frontend (사용자 인터페이스)
-            </div>
-        </div>
-
-        <div class="info">
-            <h2>🛠️ 개발 환경</h2>
-            <div class="info-item">
-                <strong>위치:</strong> <code>/frontend</code>
-            </div>
-            <div class="info-item">
-                <strong>상태:</strong> 준비 중
-            </div>
-            <div class="info-item">
-                <strong>역할:</strong> 사용자 인터페이스 제공
-            </div>
-        </div>
-
-        <div class="footer">
-            <p>MaLangEE © 2025 | <a href="https://github.com/MaLangEECoperation/MaLangEE" target="_blank">GitHub Repository</a></p>
-            <p style="margin-top: 10px;">마지막 업데이트: 2025-12-27</p>
-        </div>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MaLangEE React App</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
